# embedded-fans

./: Cargo.toml  README.md
.github/workflows/: check.yml
embedded-fans/: Cargo.toml  README.md
embedded-fans-async/: Cargo.toml  README.md
embedded-fans-async/src/: lib.rs
embedded-fans/src/: lib.rs
