[package]
authors = ["Microsoft"]
categories = ["embedded", "no-std", "hardware-support"]
edition = "2021"
rust-version = "1.79"
keywords = ["hal", "fans"]
license = "MIT"
name = "embedded-fans"
readme = "README.md"
repository = "https://github.com/pop-project/embedded-fans"
version = "0.1.0"

[features]
defmt = ["dep:defmt"]

[dependencies]
defmt = { package = "defmt", version = "0.3.7", optional = true }
