[package]
authors = ["Kurtis Dinelle <kdinelle@microsoft.com>"]
categories = ["embedded", "no-std", "hardware-support"]
edition = "2021"
rust-version = "1.79"
keywords = ["hal", "fans"]
license = "MIT"
name = "embedded-fans"
readme = "README.md"
repository = "https://github.com/OpenDevicePartnership/embedded-fans"
version = "0.1.0"

[features]
defmt = ["dep:defmt"]

[dependencies]
defmt = { package = "defmt", version = "1.0.1", optional = true }
